# gaia

./: .gitignore  .pre-commit-config.yaml  6bx1ar113quXFlC4E2M0vQ  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  concerts  fix.md  install.sh  main.py  prompt.md  pyproject.toml  report.md
.claude/agents/: adk-reviewer.md  lib-researcher.md  test-runner.md
.claude/commands/: new-agent.md  plan-feature.md
.claude/skills/a2a-patterns/: SKILL.md
.claude/skills/adk-patterns/: SKILL.md
.claude/skills/feature-workflow/: SKILL.md
.claude/skills/new-command/: SKILL.md
.claude/skills/new-connector/: SKILL.md
.claude/skills/new-tool/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: .npmrc  astro.config.mjs  cloudflare-image-worker.md  memory-design.md  missions-design.md  mvp-demo.md  package-lock.json  package.json  workspace-design.md
docs/diagrams/: gym-trace.d2  memory-flow.d2  missions.d2
docs/public/: CNAME
docs/public/diagrams/: task-states.d2
docs/src/components/: Header.astro
docs/src/styles/: brand.css
scripts/: gen_reference.py  install.sh
src/gaia/: __init__.py  app.py  communication.py  constants.py  crash.py  dev.py  di.py  legal.py  logfmt.py  logs.py  mcp.py  models.py  runtime.py  skills.py  state.py  voice.py
src/gaia/acl/: __init__.py  groups.py  resolve.py
src/gaia/agents/: __init__.py  factory.py  registry.py  skill_author.py  spec.py
src/gaia/analysis/: __init__.py  analyst.py  apply.py  events.py  journal.py  loop.py  scheduler.py
src/gaia/cli/: __init__.py  __main__.py  _complete.py  _console.py  _envfile.py  _help_theme.py  _models.py  _pidfile.py  _select.py  _yamledit.py  acl.py  analyze.py  completion.py  config.py  connect.py  cron.py  daemon.py  doctor.py  grow.py  improvements.py  lifecycle.py  llm.py  logs.py  mcp.py  memory.py  model.py  monitor.py  report.py  root.py  service.py  setup.py  skill.py  soul.py  style.py  task.py  tasks.py  tools.py  user.py
src/gaia/commands/: __init__.py  agents.py  base.py  catalog.py  effort.py  forget.py  grow.py  help.py  improvements.py  mcp.py  memories.py  memory.py  model.py  permissions.py  registry.py  remember.py  reset.py  skill.py  soul.py  souls.py  status.py  style.py  task.py  tasks.py  user.py  users.py  whoami.py
src/gaia/config/: __init__.py  scaffold.py  schema.py  settings.py  store.py
src/gaia/connectors/: __init__.py  base.py  cli.py  socket.py  socket_protocol.py  telegram.py  whatsapp.py  whatsapp_web.py
src/gaia/core/: __init__.py  acl_toolset.py  agent.py  coalesce.py  dispatch.py  elicit.py  handler.py  plugins.py  prompt.py  screenshots.py
src/gaia/cron/: __init__.py  runner.py  scheduler.py  store.py
src/gaia/memory/: __init__.py  backend.py  profile.py  service.py
src/gaia/missions/: __init__.py  dispatcher.py  notify.py  present.py  store.py
src/gaia/monitor/: __init__.py  analyst.py  digest.py  github.py  loop.py  state.py
src/gaia/providers/: __init__.py
src/gaia/souls/: __init__.py  consult.py  delegate.py  projects.py  run.py  sessions.py  smith.py
src/gaia/tools/: __init__.py  _helpers.py  ask_user.py  capabilities.py  command.py  cron.py  download_media.py  list_projects.py  manage_mcp.py  message.py  permission.py  registry.py  remember.py  save_secret.py  save_skill.py  send_file.py  set_communication_style.py  share.py  task.py  web_fetch.py  web_search.py
src/gaia/users/: __init__.py  store.py
src/godpy/: __init__.py  app.py  communication.py  config.py  constants.py  dev.py  logs.py  mcp.py  models.py  skills.py
src/godpy/agents/: __init__.py  factory.py  registry.py  spec.py
src/godpy/cli/: __init__.py  __main__.py  _console.py  _options.py  _pidfile.py  daemon.py  llm.py  root.py
src/godpy/commands/: __init__.py  agents.py  base.py  forget.py  help.py  memories.py  registry.py  remember.py  reset.py  status.py  whoami.py
src/godpy/config/: __init__.py  scaffold.py  schema.py  settings.py  store.py
src/godpy/connectors/: __init__.py  _neonize_compat.py  base.py  cli.py  telegram.py  whatsapp.py  whatsapp_web.py
src/godpy/god/: __init__.py  agent.py  handler.py  plugins.py  screenshots.py
src/godpy/memory/: __init__.py  backend.py  long_term.py  service.py  short_term.py
src/godpy/providers/: __init__.py
src/godpy/souls/: __init__.py  delegate.py  smith.py
src/godpy/tools/: __init__.py  ask.py  filesystem.py  registry.py  remember.py  web_fetch.py  web_search.py
tests/: _fakes.py  conftest.py
tests/system/: test_acl_integration.py  test_analyst.py  test_analyze_cli.py  test_ask.py  test_ask_user.py  test_browser.py  test_browser_render.py  test_cli_dev.py  test_communication.py  test_completion.py  test_config.py  test_connect.py  test_daemon.py  test_exec.py  test_gaia_delegation.py  test_god_delegation.py  test_mcp.py  test_memory.py  test_missions_store.py  test_monitor.py  test_serve_render.py  test_serve_tunnel.py  test_skills.py  test_soul_cli.py  test_soul_delegation.py  test_tool_invocation.py  test_tools.py  test_voice.py  test_voice_tts.py  test_whatsapp_web.py
tests/unit/: test_acl_resolve.py  test_acl_toolset.py  test_analysis_events.py  test_app_daemon.py  test_ask_render.py  test_ask_tool.py  test_ask_user.py  test_backend_selection.py  test_browser.py  test_browser_navigate_file.py  test_capabilities.py  test_chatgpt_auth.py  test_chatgpt_null_args.py  test_chatgpt_responses.py  test_chunking.py  test_cli_connector.py  test_coalesce.py  test_command_catalog.py  test_command_registry.py  test_commands.py  test_communication.py  test_config_launch.py  test_config_schema.py  test_config_store.py  test_connector_launch.py  test_constants.py  test_consult_soul.py  test_crash.py  test_cron_runner.py  test_cron_scheduler.py  test_cron_store.py  test_cron_tool.py  test_dev.py  test_di.py  test_dispatch.py  test_docs_fresh.py  test_download_media.py  test_e2e_turn.py  test_exec.py  test_exec_served_ports.py  (+83 more)
(+134 files in other folders)
