[project]
name = "godpy"
version = "0.1.0"
description = "God — an AI agent that spawns, stores, and fine-tunes task-specific subagents."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "sho0pi" }]
dependencies = [
    "google-adk>=1.0",
    "a2a-sdk>=0.3",
    "mem0ai>=0.1",
    "python-telegram-bot>=22.0",
    "pywa>=2.0",
    # 0.3.18 ships protobuf-7.34 gencode but only needs baseline wire features, so
    # it runs on the protobuf<7 runtime adk/mem0/a2a pin once the gencode version
    # guard is neutralised (see connectors/whatsapp_web.py).
    "neonize>=0.3.18",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "textual>=8.2.7",
    "python-json-logger>=4.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "types-PyYAML>=6.0",
]
tools = [
    "ddgs>=9.14.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/godpy"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ASYNC", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Verbatim voice prompts: long lines and the literal em/en dashes they forbid are
# intentional and must not be reflowed or "fixed".
"src/godpy/communication.py" = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src"]

# These libraries ship no type stubs / py.typed marker yet.
[[tool.mypy.overrides]]
module = ["mem0.*", "pywa.*", "neonize.*", "google.protobuf.*", "ddgs.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --cov=src/godpy"
