[project]
name = "gaia"
version = "0.1.0"
description = "Gaia — an AI agent that spawns, stores, and fine-tunes task-specific subagents."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "sho0pi" }]
dependencies = [
    "google-adk>=1.0",
    "a2a-sdk>=0.3",
    "mem0ai>=0.1",
    "python-telegram-bot>=22.0",
    "pywa>=2.0",
    # 0.3.18 ships protobuf-7.34 gencode but only needs baseline wire features, so
    # it runs on the protobuf<7 runtime adk/mem0/a2a pin once the gencode version
    # guard is neutralised (see connectors/whatsapp_web.py).
    "neonize>=0.3.18",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "textual>=8.2.7",
    "python-json-logger>=4.1.0",
    # The gaia console command (Typer = click + rich help + shell completion).
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
gaia = "gaia.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "types-PyYAML>=6.0",
]
tools = [
    "binaryornot>=0.4.4",
    "ddgs>=9.14.4",
    "httpx>=0.27",
    "trafilatura>=1.8",
]
# Long-term memory backend. mem0 (a core dep) orchestrates the LLM+embedder via
# google-genai (already pulled by google-adk); only the embedded vector store is
# extra. chroma is file-backed and serverless, so it runs anywhere — down to a Pi.
memory = [
    "chromadb>=0.5",
]
# Non-Gemini model providers: OpenAI/GPT etc. via ADK's LiteLLM wrapper, and "Sign in
# with ChatGPT" (httpx for the OAuth flow + Responses backend). Only needed when
# gaia.yaml sets a non-gemini llm.provider; lazy-imported.
llm = [
    "litellm>=1.0",
    "httpx>=0.27",
]
# Headless browser automation (the browser_* tools). Playwright drives a real
# Chromium over CDP; async-native, ships the accessibility snapshot we hand the
# model. Lazy-imported, so gaia imports without it. After installing the group, run
# `uv run playwright install chromium` once to fetch the browser binary.
browser = [
    "playwright>=1.40",
]
# External MCP (Model Context Protocol) servers, consumed via ADK's McpToolset.
# `mcp` is the Python SDK ADK's mcp_tool imports. Lazy-imported and only touched when
# gaia.yaml configures an mcp.server, so gaia imports without it. stdio servers also need
# their own runtime on PATH (e.g. `bunx` for node servers). NOTE: the DEFAULT browser
# backend (browser.backend: mcp) is Microsoft's playwright-mcp launched via `bunx`, so it
# needs this group AND bun on PATH (`brew install bun` / https://bun.sh). Without either,
# the backend falls back to the native browser tools (the 'browser' group).
mcp = [
    "mcp>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gaia"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ASYNC", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Verbatim voice prompts: long lines and the literal em/en dashes they forbid are
# intentional and must not be reflowed or "fixed".
"src/gaia/communication.py" = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src"]

# These libraries ship no type stubs / py.typed marker yet.
[[tool.mypy.overrides]]
module = [
    "mem0.*",
    "chromadb.*",
    "litellm.*",
    "pywa.*",
    "neonize.*",
    "google.protobuf.*",
    "ddgs.*",
    "trafilatura.*",
    "binaryornot.*",
    "mcp.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --cov=src/gaia"
markers = [
    "system: needs an external resource (model key, native lib, or browser binary)",
]
