[project]
name = "gaia"
dynamic = ["version"]
description = "Gaia — an AI agent that spawns, stores, and fine-tunes task-specific subagents."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "sho0pi" }]
dependencies = [
    "google-adk>=2.3.0",
    "a2a-sdk>=1.1.0",
    # >=2.0.6: 2.0.4's chroma search fed raw L2 distance to a higher-is-better hybrid
    # ranker, inverting recall order (relevant facts buried); 2.0.6 converts distance to
    # a similarity score (1/(1+d)) so search_memory ranks correctly. See PR for triage.
    "mem0ai>=2.0.10",
    "python-telegram-bot>=22.8",
    "pywa>=4.2.1",
    # 0.3.18 ships protobuf-7.34 gencode but only needs baseline wire features, so
    # it runs on the protobuf<7 runtime adk/mem0/a2a pin once the gencode version
    # guard is neutralised (see connectors/whatsapp_web.py).
    "neonize>=0.3.18.post0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "python-json-logger>=4.1.0",
    # The gaia console command (Typer = click + rich help + shell completion).
    "typer>=0.26.8",
    "rich>=15.0.0",
    "prompt-toolkit>=3.0.52",
    "apscheduler>=3.11.3",
    # Small pure-Python DI container (providers.Singleton = lazy build-once,
    # providers.Callable for hot-reloaded values). Houses Gaia's build-once
    # services (transcriber, memory, mcp/skill toolsets, registries) in
    # `gaia.di.Container`; see AGENTS.md "Service lifecycle & DI".
    "dependency-injector>=4.49.1",
    "ruamel-yaml>=0.19.1",
]

[project.scripts]
gaia = "gaia.cli:main"

# Optional features exposed as extras so a consumer can `uv pip install "gaia[browser]"`
# (the installer uses `gaia[all]`). Each is lazy-imported, so gaia runs without it.
[project.optional-dependencies]
tools = [
    "binaryornot>=0.6.0",
    "ddgs>=9.14.4",
    "httpx>=0.28.1",
    "trafilatura>=2.1.0",
]
# Long-term memory backend. mem0 (a core dep) orchestrates the LLM+embedder via
# google-genai (already pulled by google-adk); only the embedded vector store is
# extra. chroma is file-backed and serverless, so it runs anywhere — down to a Pi.
memory = [
    "chromadb>=1.5.9",
]
# Non-Gemini model providers: OpenAI/GPT etc. via ADK's LiteLLM wrapper, and "Sign in
# with ChatGPT" (httpx for the OAuth flow + Responses backend). Only needed when
# gaia.yaml sets a non-gemini llm.provider; lazy-imported.
llm = [
    "litellm>=1.90.2",
    "httpx>=0.28.1",
]
# Headless browser automation (the browser_* tools). Playwright drives a real
# Chromium over CDP; async-native, ships the accessibility snapshot we hand the
# model. Lazy-imported, so gaia imports without it. After installing the extra, run
# `uv run playwright install chromium` once to fetch the browser binary.
browser = [
    # Pinned <1.60: Playwright 1.60.0's Firefox driver reads `pageError.location.url` without a
    # null-check (microsoft/playwright#39767), and Camoufox's Firefox fires page errors with no
    # location — so any JS-heavy site crashes the driver ("Connection closed while reading from the
    # driver"). Camoufox 0.4.11 (latest) doesn't pin Playwright, so it pulled the broken 1.60.0.
    # Until camoufox#617 ships a fix, hold Playwright at the last good 1.59.x. See docs/browser.
    "playwright>=1.61.0,<1.62",
    # Camoufox: an anti-detect Firefox (Playwright-compatible) for browser.engine='camoufox'.
    # Dormant unless that engine is selected; its Firefox build is fetched via
    # `python -m camoufox fetch` (wired into the runtime setup), not pip.
    "camoufox[geoip]>=0.4.11",
]
# External MCP (Model Context Protocol) servers, consumed via ADK's McpToolset.
# `mcp` is the Python SDK ADK's mcp_tool imports. Lazy-imported and only touched when
# gaia.yaml configures an mcp.server, so gaia imports without it. stdio servers also need
# their own runtime on PATH (e.g. `bunx` for node servers). NOTE: the DEFAULT browser
# backend (browser.backend: mcp) is Microsoft's playwright-mcp launched via `bunx`, so it
# needs this extra AND bun on PATH (`brew install bun` / https://bun.sh). Without either,
# the backend falls back to the native browser tools (the 'browser' extra).
mcp = [
    "mcp>=1.28.1",
]
# Media download: yt-dlp powers the `download_media` tool (Instagram reels, TikTok, YouTube, …).
# In `all` (pure-python, lazy-imported); the tool only registers when this is installed, so a
# minimal install can still drop it by skipping this extra.
media = [
    "yt-dlp>=2026.6.9",
]
# Inbound voice messages: local speech-to-text via faster-whisper (CTranslate2
# Whisper, CPU int8 — Pi-viable). Decodes WhatsApp's ogg/opus through its bundled
# PyAV, so no ffmpeg binary is needed. Model weights download from Hugging Face on
# the first transcription. Lazy-imported; gaia runs without it (voice notes ignored).
voice = [
    "faster-whisper>=1.2.1",
]
# Everything — what the installer pulls (`gaia[all]`) so every feature works out of the box.
all = ["gaia[tools,memory,llm,browser,mcp,voice,media]"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
    "mypy>=2.1.0",
    "types-PyYAML>=6.0.12.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Single source of truth for the version: src/gaia/__init__.py (__version__). Bump it there.
[tool.hatch.version]
path = "src/gaia/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/gaia"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# PLW0603 ("Using the global statement is discouraged") guards the DI/lifecycle
# convention: no module-level mutable singletons for service construction.
# See AGENTS.md "Service lifecycle & DI".
select = ["E", "F", "I", "N", "UP", "B", "ASYNC", "RUF", "PLW0603"]

[tool.ruff.lint.per-file-ignores]
# Verbatim voice prompts: long lines and the literal em/en dashes they forbid are
# intentional and must not be reflowed or "fixed".
"src/gaia/communication.py" = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src"]

# These libraries ship no type stubs / py.typed marker yet.
[[tool.mypy.overrides]]
module = [
    "mem0.*",
    "chromadb.*",
    "litellm.*",
    "pywa.*",
    "neonize.*",
    "google.protobuf.*",
    "ddgs.*",
    "trafilatura.*",
    "lxml.*",
    "binaryornot.*",
    "mcp.*",
    "apscheduler.*",
    "faster_whisper.*",
    "dependency_injector.*",
    "camoufox.*",
    "yt_dlp.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["tests"]  # shared test doubles importable as `from _fakes import ...`
addopts = "-ra"  # coverage runs in CI (--cov=src/gaia); opt in locally with --cov
markers = [
    "system: needs an external resource (model key, native lib, or browser binary)",
]
